<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">过家家</string>
    <string name="login_user_hint">输入昵称</string>
    <string name="login_email_hint">输入邮箱</string>
    <string name="login_psw_hint">输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="psw_forget">忘记密码</string>
    <string name="psw_forget_btn">重置密码</string>
    <string name="intro">存钱 记账 过家家</string>
    <string name="error_register_email_address_null">邮箱地址不能空着哦</string>
    <string name="error_register_email_address_wrong">邮箱的格式不太对，请填写真实的邮箱地址，以后找回密码的时候可能会用到哦</string>
    <string name="error_register_user_name_null">昵称不能空着哦</string>
    <string name="error_register_password_null">密码不能空着哦</string>
    <string name="login_fail">登录失败，请检查昵称和密码输入是否正确</string>
    <string name="find_psw_fail">申请重置失败，请重试</string>
    <string name="find_psw_ok">申请重置成功，请到注册邮箱里检查邮件完成密码修改。</string>
    <string name="dialog_message_title">提示</string>
    <string name="dialog_text_wait">请稍等...</string>
    <string name="success_register_success">注册成功! </string>
    <string name="error_register_user_name_repeat">用户名已被注册，请重新填写</string>
    <string name="error_register_email_repeat">邮箱已被注册，请更换邮箱</string>
    <string name="network_error">网络错误，请检查您的网络连接</string>
    <string name="iknow">我知道了</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="home_total">存钱总额</string>
    <string name="home_recent">最近新增</string>
    <string name="home_progress">目标进度</string>
    <string name="home_average">月均新增</string>
    <string name="home_history">历史记录</string>
    <string name="home_add">每月一记</string>
    <string name="ask_quit">再点一次就退出了</string>
    <string name="edit_items">类别编辑</string>
    <string name="init_items">现金|工资卡|公积金|余额宝</string>
    <string name="save">保存</string>
    <string name="item_save_ok">类别修改成功</string>
    <string name="item_save_fail">类别修改失败，请重试</string>
    <string name="items_edit_hint">除了删除和添加，类别\n名称也可以点击修改哦</string>
    <string name="no_more">不再提醒</string>
    <string name="setting">设置</string>
    <string name="add">添加</string>
    <string name="timeout">这么长时间都没有启动成功，感觉你手机网络有点问题，请检查一下</string>
    <string name="delete_hint">类别删除后，之前存在此类别下的数据将会移动到“其它”中，是否继续？</string>
    <string name="delete_one_hint">最后一个无法删除哦!</string>
    <string name="item_name_null">类别名称不能空着哦!</string>
    <string name="item_name_other">类别名称不能叫“其它”或“其他”，我也不知道为什么，反正换个名字吧^_^</string>
    <string name="other1">其它</string>
    <string name="other2">其他</string>
    <string name="desc">备注</string>
    <string name="desc_hint">想想本月钱都花哪了</string>
    <string name="content_null">金额要填数字!</string>
    <string name="month_save_ok">月度数据提交成功！</string>
    <string name="month_save_fail">月度数据提交失败，请重试!</string>
    <string name="save_month_cover">本月份已有数据，再次保存将会覆盖原有数据，是否继续？</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="month_hint_null">本月木有记录</string>
    <string name="nil">无</string>
    <string name="edit">修改</string>
    <string name="edit_month">记录修改</string>
    <string name="total">总计</string>
    <string name="delete">删除</string>
    <string name="delete_fail">删除失败，请重试!</string>
    <string name="delete_month_hint">真的要删除当前月份记录吗？</string>
    <string name="input_item">输入类别名称</string>
    <string name="logout">账号注销</string>
    <string name="theme_color">颜色主题</string>
    <string name="plan">存钱目标</string>
    <string name="plan_input">点此输入</string>
    <string name="ask_logout">真的要注销账号吗？</string>
    <string name="items">财产类别</string>
    <string name="feedback">意见反馈</string>
    <string name="about">关于帮助</string>
    <string name="edit_fail">修改失败</string>
    <string name="line_hint_null">暂无趋势数据</string>
</resources>
