<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingTop="35dp"
        android:paddingLeft="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:gravity="left"
        android:background="?attr/color_app"
        android:layout_alignParentTop="true"
        android:text="@string/edit_items"/>
    <RelativeLayout
        android:id="@+id/tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:background="?attr/color_app">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center_vertical|left"
            android:paddingLeft="20dp"
            android:paddingRight="100dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:background="@color/glass_light"
            android:text="@string/items_edit_hint"/>
        <Button 
            android:id="@+id/tip_hide"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:background="@color/glass_dark"
            android:text="@string/no_more"/>
    </RelativeLayout>
    
    <com.guu.money.views.EditListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:listSelector="@null" 
        android:divider="@null"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tip"
        android:cacheColorHint="@color/glass"
        android:scrollbars="none">
    </com.guu.money.views.EditListView>
</RelativeLayout>