<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray" >
    <ImageView 
        android:id="@+id/logo"
        android:src="@drawable/logo_mid"
        android:layout_width="150dp"
        android:layout_height="150dp" 
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">     
    </ImageView>
    <TextView 
        android:id="@+id/intro"
        android:layout_below="@id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        android:text="@string/intro"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true">     
    </TextView>
    <RelativeLayout
        android:id="@+id/user_zone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:visibility="invisible"
        android:layout_below="@id/logo">
        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_user_hint"
            android:textSize="20sp"
            android:layout_marginLeft="50dp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:textColorHint="@color/hint_white"
            android:background="@null">     
        </EditText>
        <View
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white">     
        </View>
        <ImageView 
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/user"
            android:layout_width="20dp"
            android:layout_height="20dp" >     
        </ImageView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/psw_zone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:visibility="invisible"
        android:layout_below="@id/user_zone">
        <EditText
            android:id="@+id/psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_psw_hint"
            android:textSize="20sp"
            android:layout_marginLeft="50dp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:inputType="textPassword"
            android:textColorHint="@color/hint_white"
            android:background="@null">     
        </EditText>
        <View
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white">     
        </View>
        <ImageView 
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/key"
            android:layout_width="20dp"
            android:layout_height="20dp" >     
        </ImageView>
    </RelativeLayout>
    <Button 
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp"
        android:visibility="invisible"
        android:layout_below="@id/psw_zone"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:background="@drawable/button_gray">     
    </Button>
    <LinearLayout 
        android:id="@+id/more_zone"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:layout_below="@id/btn_login"> 
        <Button 
            android:id="@+id/btn_forget"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psw_forget"
            android:textColor="@color/hint_white"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@null">     
        </Button>
        <TextView 
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:textColor="@color/hint_white"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@null">     
        </TextView>
        <Button 
            android:id="@+id/btn_regi"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/hint_white"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@null">     
        </Button>
    </LinearLayout>
    
</RelativeLayout>
