<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:paddingTop="35dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="?attr/color_app"
        android:layout_alignParentTop="true"
        android:text="@string/app_name"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:layout_below="@id/title"
        android:layout_margin="20dp"
        android:background="@color/white">     
    </View>
    
    <RelativeLayout 
        android:id="@+id/area1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="20dp">
        
        <TextView 
            android:id="@+id/lab0"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/home_total"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/line">     
        </TextView>
        <TextView 
            android:id="@+id/num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="100000"
            android:textSize="80sp"
            android:layout_below="@id/lab0"
            android:layout_centerHorizontal="true"
            android:textColor="@color/line">     
        </TextView>
        <RelativeLayout 
            android:id="@+id/show3"
            android:layout_width="100dp"
            android:layout_height="wrap_content" 
            android:layout_below="@id/num1"
            android:layout_centerHorizontal="true">
            <TextView 
                android:id="@+id/lab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/home_progress"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/line">     
            </TextView>
            <TextView 
                android:id="@+id/num3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="25%"
                android:textSize="30sp"
                android:layout_below="@id/lab3"
                android:layout_centerHorizontal="true"
                android:textColor="#86ac23">     
            </TextView>
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/show2"
            android:layout_width="100dp"
            android:layout_height="wrap_content" 
            android:layout_below="@id/num1"
            android:layout_toLeftOf="@id/show3"
            android:layout_centerHorizontal="true">
            <TextView 
                android:id="@+id/lab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/home_recent"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/line">     
            </TextView>
            <TextView 
                android:id="@+id/num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="5236"
                android:textSize="30sp"
                android:layout_below="@id/lab2"
                android:layout_centerHorizontal="true"
                android:textColor="#f37721">     
            </TextView>
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/show4"
            android:layout_width="100dp"
            android:layout_height="wrap_content" 
            android:layout_below="@id/num1"
            android:layout_toRightOf="@id/show3"
            android:layout_centerHorizontal="true">
            <TextView 
                android:id="@+id/lab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/home_average"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/line">     
            </TextView>
            <TextView 
                android:id="@+id/num4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="5500"
                android:textSize="30sp"
                android:layout_below="@id/lab4"
                android:layout_centerHorizontal="true"
                android:textColor="#2796de">     
            </TextView>
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout 
        android:id="@+id/area3"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"> 
        <Button 
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="50dp" 
            android:text="@string/home_history"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:background="?attr/color_app"
            android:layout_weight="1">     
        </Button>
        <Button 
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="50dp" 
            android:text="@string/home_add"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:background="?attr/color_app"
            android:layout_weight="1">     
        </Button>
    </LinearLayout>
    <RelativeLayout 
            android:id="@+id/area2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" 
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:layout_below="@id/area1"
            android:layout_above="@id/area3">
            <View 
                android:layout_width="match_parent"
                android:layout_height="1dp" 
                android:layout_alignParentTop="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@color/gray">     
            </View>
    </RelativeLayout>
    
</RelativeLayout>