<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:paddingTop="35dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="?attr/color_app"
        android:layout_alignParentTop="true"
        android:text="@string/setting" />
    
   
    
    <RelativeLayout 
            android:id="@+id/btn_logout"
            android:layout_below="@id/title"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/setting_bg" >
            <TextView 
                android:id="@+id/logout_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/logout"
                android:textSize="17sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:textColor="@color/gray_text">     
            </TextView>
            <TextView 
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="25dp"
                android:textColor="?attr/color_app">     
            </TextView>
            <View 
                android:layout_width="match_parent"
                android:layout_height="1dp" 
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/gray">     
            </View>
    </RelativeLayout>
    
    <RelativeLayout 
            android:id="@+id/btn_theme"
            android:layout_below="@id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/setting_bg" >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/theme_color"
                android:textSize="17sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:textColor="@color/gray_text">     
            </TextView>
            <View 
                android:layout_width="20dp"
                android:layout_height="20dp" 
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="25dp"
                android:background="?attr/color_app">     
            </View>
            <View 
                android:layout_width="match_parent"
                android:layout_height="1dp" 
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/gray">     
            </View>
    </RelativeLayout>
    <RelativeLayout 
            android:id="@+id/btn_plan"
            android:layout_below="@id/btn_theme"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/setting_bg" >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/plan"
                android:textSize="17sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:textColor="@color/gray_text">     
            </TextView>
            <TextView 
                android:id="@+id/plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="25dp"
                android:textColor="?attr/color_app">     
            </TextView>
            <View 
                android:layout_width="match_parent"
                android:layout_height="1dp" 
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/gray">     
            </View>
    </RelativeLayout>
    <RelativeLayout 
            android:id="@+id/btn_items"
            android:layout_below="@id/btn_plan"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/setting_bg" >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/items"
                android:textSize="17sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:textColor="@color/gray_text">     
            </TextView>
            <View 
                android:layout_width="match_parent"
                android:layout_height="1dp" 
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/gray">     
            </View>
    </RelativeLayout>
    
    <RelativeLayout 
            android:id="@+id/btn_feedback"
            android:layout_below="@id/btn_items"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/setting_bg" >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/feedback"
                android:textSize="17sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:textColor="@color/gray_text">     
            </TextView>
            <View 
                android:layout_width="match_parent"
                android:layout_height="1dp" 
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/gray">     
            </View>
    </RelativeLayout>
    
    <RelativeLayout 
            android:id="@+id/btn_about"
            android:layout_below="@id/btn_feedback"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/setting_bg" >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/about"
                android:textSize="17sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:textColor="@color/gray_text">     
            </TextView>
            <View 
                android:layout_width="match_parent"
                android:layout_height="1dp" 
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/gray">     
            </View>
    </RelativeLayout>
</RelativeLayout>